--- a/recipes/pizzaDough.html
+++ b/recipes/pizzaDough.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Pizza Dough recipe</h1>
 
-        <img src="recipeImage/pizza.jpg" alt="homemade pizza">
+        <img src="recipeImage/pizzaDough.jpeg" alt="homemade pizza">
 
         <h1>Pizza Dough</h1>
         <p>Pizza dough is so easy to make it only takes a few minutes. STOP BUYING PREMADE DOUGHT</p>
@@ -18,9 +18,21 @@
             <li>Instant Yeast(2 1/4ts)</li>
             <li>Sugar(1 1/2ts)</li>
             <li>Salt(3/4ts)</li>
-            <li>Basil</li>
             <li>Olive Oil(2tbs)</li>
             <li>Water(3/4cup)</li>
         </ul>
+
+        <p><em>Directions</em>:</p>
+        <ol>
+            <li>Get all the dry ingrediants(flour/yeast/sugar/salt) and pour them into a bowl</li>
+            <li>Mix all the dry ingrediants for about 5 minutes</li>
+            <li>Add 2tbs of olive oil and 3/4 cup of warm Water</li>
+            <li>Mix and keep adding flour until it doesn't stick to your hands</li>
+            <li>Get another bowl and cover it with olive oil so it doesn't stick</li>
+            <li>Place dough into the new bowl and wrap the bowl so no air gets in</li>
+            <li>Wait for 30 minutes</li>
+            <li>Preheat oven to 400F</li>
+            <li>Place sauce and toppings of your choice and enjoy!</li>   
+        </ol>
     </body>
 </html>
