--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/hamburgerBuns.html">Hamburger Buns</a></li>
             <li><a href="recipes/pizzaDough.html">Pizza Dough</a></li>
+            <li><a href="recipes/cookies.html">Cookies :)</a></li>
         </ul>
         
     </body>
