add return home link

--- a/recipes/hamburgerBuns.html
+++ b/recipes/hamburgerBuns.html
@@ -34,5 +34,7 @@
             <li>Pre cook oven to 375°</li>
             <li>Cook till golden brown (20ish minutes)</li>
         </ol>
+
+        <p><a href="../index.html">return</a></p>
     </body>
 </html>
