--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -36,5 +36,7 @@
             <li>Take out cookies, wait for about 5 minutes to cool</li>
             <li>Enjoy!</li>
         </ol>
+
+        <p><a href="../index.html">return</a></p>
     </body>
 </html>
