--- a/recipes/pizzaDough.html
+++ b/recipes/pizzaDough.html
@@ -34,5 +34,7 @@
             <li>Preheat oven to 400F</li>
             <li>Place sauce and toppings of your choice and enjoy!</li>   
         </ol>
+
+        <p><a href="../index.html">return</a></p>
     </body>
 </html>
