added color and aligned text

--- a/recipes/hamburgerBuns.html
+++ b/recipes/hamburgerBuns.html
@@ -2,23 +2,26 @@
 <html lang="en">
     <meta charset="utf-8">
     <title>Hamburger Buns</title>
+    <link rel="stylesheet" href="../styles.css">
 
     <body>
         <h1>Hamburger Buns</h1>
         <img src="recipeImage/hamburgerBuns.jpeg" alt="homemade buns">
 
         <p>Stop buying those mid af buns in the Supermarket and start making these bomb buns</p>
-        <p><em>Ingrediants</em> (9 buns):</p>
-        <ul>
-            <li>Bread Flower(3 1/2cups)</li>
-            <li>Vegatble Oil(2tbs)</li>
-            <li>Sugar(2ts)</li>
-            <li>Salt(1 1/2ts)</li>
-            <li>Milk(1/2cup)</li>
-            <li>Water(1/2cup)</li>
-            <li>Yeast(2 1/2ts)</li>
-            <li>Eggs(3)</li>
-        </ul>
+        <div class="list">
+            <p><em>Ingrediants</em> (9 buns):</p>
+            <ul>
+                <li>Bread Flower(3 1/2cups)</li>
+                <li>Vegatble Oil(2tbs)</li>
+                <li>Sugar(2ts)</li>
+                <li>Salt(1 1/2ts)</li>
+                <li>Milk(1/2cup)</li>
+                <li>Water(1/2cup)</li>
+                <li>Yeast(2 1/2ts)</li>
+                <li>Eggs(3)</li>
+            </ul>
+        </div>
 
         <p><em>Directions</em>:</p>
         <ol>
