--- a/recipes/pizzaDough.html
+++ b/recipes/pizzaDough.html
@@ -3,6 +3,7 @@
 
     <meta charset ="utf-8">
     <title>pizza time</title>
+    <link rel="stylesheet" href="../styles.css">
 
     <body>
         <h1>Pizza Dough recipe</h1>
@@ -11,16 +12,17 @@
 
         <h1>Pizza Dough</h1>
         <p>Pizza dough is so easy to make it only takes a few minutes. STOP BUYING PREMADE DOUGHT</p>
-
-        <p><em>Ingrediants</em> (10in dough):</p>
-        <ul>
-            <li>All-Purpose Flour/Bread Flour(2 1/3cups)</li>
-            <li>Instant Yeast(2 1/4ts)</li>
-            <li>Sugar(1 1/2ts)</li>
-            <li>Salt(3/4ts)</li>
-            <li>Olive Oil(2tbs)</li>
-            <li>Water(3/4cup)</li>
-        </ul>
+        <div class="list">
+            <p><em>Ingrediants</em> (10in dough):</p>
+            <ul>
+                <li>All-Purpose Flour/Bread Flour(2 1/3cups)</li>
+                <li>Instant Yeast(2 1/4ts)</li>
+                <li>Sugar(1 1/2ts)</li>
+                <li>Salt(3/4ts)</li>
+                <li>Olive Oil(2tbs)</li>
+                <li>Water(3/4cup)</li>
+            </ul>
+        </div>     
 
         <p><em>Directions</em>:</p>
         <ol>
