--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes Webpage</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="list">
             <li><a href="recipes/hamburgerBuns.html">Hamburger Buns</a></li>
             <li><a href="recipes/pizzaDough.html">Pizza Dough</a></li>
             <li><a href="recipes/cookies.html">Cookies :)</a></li>
