--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -2,26 +2,27 @@
 <html lang="en">
     <meta charset="utf-8">
     <title>Cookie Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 
     <body>
         <h1>Cookie Recipe</h1>
         
         <img src="recipeImage/cookies.jpeg" alt="homemade cookies">
         <p>If for some reason your gradma didnt have a cookie recipe(like mine) then this will be your grandma recipe</p>
-
-        <p><em>Ingrediants</em> (6 big cookies):</p>
-        <ul>
-            <li>Sugar(1/2cup)</li>
-            <li>Brown Sugar(3/4cup)</li>
-            <li>Salt(1ts)</li>
-            <li>Unsalted Butter(stick)</li>
-            <li>Egg</li>
-            <li>Vanilla Extract(1ts)</li>
-            <li>All-Purpose Flour(1 1/4cups)</li>
-            <li>Baking Soda(1/2ts)</li>
-            <li>Chocolate(4oz)</li>
-        </ul>
-
+        <div class="list">
+            <p><em>Ingrediants</em> (6 big cookies):</p>
+            <ul>
+                <li>Sugar(1/2cup)</li>
+                <li>Brown Sugar(3/4cup)</li>
+                <li>Salt(1ts)</li>
+                <li>Unsalted Butter(stick)</li>
+                <li>Egg</li>
+                <li>Vanilla Extract(1ts)</li>
+                <li>All-Purpose Flour(1 1/4cups)</li>
+                <li>Baking Soda(1/2ts)</li>
+                <li>Chocolate(4oz)</li>
+            </ul>
+        </div>
         <p><em>Directions</em>:</p>
         <ol>
             <li>Mix 1/2cup of sugar, 3/4cup of brown sugar, and 1ts salt </li>
